--- a/main.css
+++ b/main.css
@@ -4,6 +4,10 @@ body {
 
 .product-container {
     display: flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+    border: powderblue solid 5px;
+    margin: 50px 0;
 }
 
 .product-card-1 {
@@ -15,7 +19,7 @@ body {
 
 img {
     display: flex;
-    width: 150px;
+    width: 130px;
     justify-content:center ;
 }
 
@@ -23,6 +27,7 @@ header {
     border: 1px solid lightblue;
     display: flex;
     justify-content: center;
+    text-align: center;
 }
 
 .product-image{
@@ -31,9 +36,6 @@ header {
     margin-top: 10px;
 }
 
-img {
-    width: 200px;
-}
 
 .product-description {
     text-align: justify;
@@ -42,7 +44,8 @@ img {
 
 .product-availability {
     background-color: darkgray;
-    color: yellow
+    color: yellow;
+    text-align: center;
 }
 
 ul {
@@ -51,5 +54,5 @@ ul {
 }
 
 h3 {
-    
+    margin: 0 5px;
 }
