--- a/main.css
+++ b/main.css
@@ -33,6 +33,7 @@ header {
     display: flex;
     justify-content: center;
     text-align: center;
+    font-family: sans-serif;
 }
 
 .product-image{
@@ -43,21 +44,25 @@ header {
 
 
 .product-description {
+    font-family: sans-serif;
     text-align: justify;
     margin: 0px 5px
 }
 
 .product-availability {
+    font-family: sans-serif;
     background-color: #6D6875;
     color: #E5989B;
     text-align: center;
 }
 
 ul {
+    font-family: sans-serif;
     font-weight: bold;
     list-style: none;
 }
 
 h3 {
+    font-family: sans-serif;
     margin: 0 5px;
 }
